--- a/internal/templates/register.html
+++ b/internal/templates/register.html
@@ -41,6 +41,14 @@
           <input type="text" class="form-control" id="name" name="name" required />
         </div>
         <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input type="email" class="form-control" id="email" name="email" required />
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Пароль</label>
+          <input type="password" class="form-control" id="password" name="password" required minlength="6" />
+        </div>
+        <div class="mb-3">
           <label for="description" class="form-label">Описание</label>
           <textarea class="form-control" id="description" name="description" rows="3" required></textarea>
         </div>
