--- a/internal/templates/index.html
+++ b/internal/templates/index.html
@@ -22,6 +22,7 @@
     </style>
 </head>
 <body>
+    {{ template "header" . }}
     <div class="container py-5">
         <div class="profile-container shadow">
             <div class="row g-0">
