--- a/internal/templates/header.html
+++ b/internal/templates/header.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-light bg-light px-4 py-2 shadow-sm">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <!-- Логотип-ссылка на предпочтения -->
-            <a class="navbar-brand d-flex align-items-center" href="/preferences">
+            <a class="navbar-brand d-flex align-items-center" href="/love">
                 <img src="/static/logo.jpg" alt="Логотип" width="40" height="40" class="me-2" />
             </a>
 
