--- a/internal/templates/love.html
+++ b/internal/templates/love.html
@@ -14,7 +14,7 @@
             object-fit: cover;
         }
         .profile-photo-container {
-            height: 500px;
+            height: 600px;
         }
         .carousel {
             height: 85%;
@@ -24,6 +24,9 @@
 <body>
     {{ template "header" . }}
     <div class="container py-5">
+        <div id="no-users-message" class="text-center py-5" style="display: none;">
+            <h3>Нет больше пользователей</h3>
+        </div>
         <div class="profile-container shadow">
             <div class="row g-0">
                 <!-- Левая колонка с каруселью фото -->
@@ -40,6 +43,16 @@
                         <button class="carousel-control-next" type="button" data-bs-target="#profileCarousel" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Следующий</span>
+                        </button>
+                    </div>
+                    
+                    <!-- Кнопки действий -->
+                    <div class="profile-actions">
+                        <button class="action-btn dislike-btn">
+                            <i class="bi bi-x-lg"></i> Не подходит
+                        </button>
+                        <button class="action-btn like-btn">
+                            <i class="bi bi-heart-fill"></i> Нравится
                         </button>
                     </div>
                 </div>
@@ -95,6 +108,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Наш JavaScript код -->
-    <script src="/static/script.js"></script>
+    <script src="/static/love.js"></script>
 </body>
 </html>
